--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,15 +5,64 @@
 }
 
 body {
-    
     font-family: Arial, Helvetica, sans-serif;
     line-height: 2;
-    width: 50%;
-    
+    /* width: 50%; */
     text-align: center;
 }
 
 header {
     color: maroon;
     background-color: darkslategray;
+}
+
+h1 {
+    line-height: 3;
+    color: cadetblue;
+    font-size: 50px;
+    font-weight: 600;
+
+}
+
+input {
+    width: 30%;
+    padding: 20px;
+    margin: 30px;
+    border: solid 4px darkgray;
+    position: relative;
+}
+
+input::placeholder {
+    text-align: center;
+    font-size: 20px;
+}
+
+
+aside {
+  width: 20%;
+  padding: 15px;
+  margin-left: 20px;
+  margin-top: 100px;
+  float: left;
+  font-style: italic;
+  border: solid 4px black;
+}
+    
+h2 {
+    font-size: 30px;
+    
+}
+
+button {
+    display: block;
+    position: absolute;
+    left: 690px;
+    width: 160px;
+    /* height: 50px; */
+    /* margin-bottom: 100px; */
+    padding: 10px;
+    border-radius: 25px;
+    font-size: 25px;
+    font-weight: bolder;
+    background-color: brown;
 }
