--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,68 +1,75 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 2;
-    /* width: 50%; */
-    text-align: center;
+html {
+    background-image: url("./images/background.jpg");
+    background-size: cover; 
+    background-position: center;
 }
 
-header {
-    color: maroon;
-    background-color: darkslategray;
+#title {
+    margin-top: 60px;
+    color: lightpink;
 }
 
-h1 {
-    line-height: 3;
-    color: cadetblue;
-    font-size: 50px;
-    font-weight: 600;
-
-}
-
-input {
-    width: 30%;
-    padding: 20px;
-    margin: 30px;
-    border: solid 4px darkgray;
-    position: relative;
-}
-
-input::placeholder {
-    text-align: center;
-    font-size: 20px;
-}
-
-
-aside {
-  width: 20%;
-  padding: 15px;
-  margin-left: 20px;
-  margin-top: 100px;
-  float: left;
-  font-style: italic;
-  border: solid 4px black;
-}
-    
-h2 {
-    font-size: 30px;
-    
-}
-
-button {
-    display: block;
-    position: absolute;
-    left: 690px;
-    width: 160px;
-    /* height: 50px; */
-    /* margin-bottom: 100px; */
-    padding: 10px;
-    border-radius: 25px;
-    font-size: 25px;
+.wrapper {
+    height: 7vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: lightpink;
     font-weight: bolder;
-    background-color: brown;
+}
+
+form {
+    text-align: center;
+    margin-left: 20px;
+}
+
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+
+.input {
+    max-width: 280px;
+}
+
+.button {
+    color: white;
+    background-color: lightpink;
+    border-radius: 5px;
+    padding: 10px 30px;
+    margin-top: 30px;
+}
+
+form input {
+    min-width: 550px;
+    min-height: 40px;
+}
+
+glow-button:hover {
+    box-shadow: 0 5px 15px rgba(145, 92, 182, 0.4);
+  }
+
+  .typing-demo {
+    font-size: 1.25em;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;   /* Height of the footer */
+    background: #6cf;
+ } 
+
+ .input::placeholder {
+    color: black;
 }
